force-app/main/default/objects/GSquare_Arena_Booking__e/GSquare_Arena_Booking__e.object-meta.xml
<CustomObject>
    <description>Published when an Opportunity becomes a booking today; the Sales Arena zone TVs show a full-screen celebration.</description>
    <label>Arena Booking</label>
    <pluralLabel>Arena Bookings</pluralLabel>
</CustomObject>