force-app/main/default/objects/GSquare_Arena_Booking__e/fields/Caller_Id__c.field-meta.xml
<CustomField>
    <fullName>Caller_Id__c</fullName>
    <label>Caller Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>