force-app/main/default/objects/GSquare_Arena_Booking__e/fields/Caller_Initials__c.field-meta.xml
<CustomField>
    <fullName>Caller_Initials__c</fullName>
    <label>Caller Initials</label>
    <length>4</length>
    <type>Text</type>
</CustomField>