force-app/main/default/objects/GSquare_Arena_Booking__e/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Caller Name</label>
    <length>121</length>
    <type>Text</type>
</CustomField>