force-app/main/default/objects/GSquare_Arena_Booking__e/fields/Photo_Url__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url__c</fullName>
    <label>Photo Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>