force-app/main/default/objects/GSquare_Arena_Booking__e/fields/Tl_Name__c.field-meta.xml
<CustomField>
    <fullName>Tl_Name__c</fullName>
    <label>TL Name</label>
    <length>121</length>
    <type>Text</type>
</CustomField>